--- a/Primer entrega.ipynb
+++ b/Primer entrega.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyP5RN3ADrTEDFU9hOq58XjA",
+      "authorship_tag": "ABX9TyPyanKgZ0RR508JC3NIER7R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,43 +29,137 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BA5wxy4fm_5b",
-        "outputId": "b2589793-9b97-4e66-d96c-c1226ae47a0d"
+        "outputId": "a3c5cd0e-9288-45f3-84dc-f6e09804bbe4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "              Nombre Plataforma  Año de lanzamiento    Genero   Editora  \\\n",
-            "0         WII SPORTS        Wii                2006  Deportes  Nintendo   \n",
-            "1     MARIO KART WII        Wii                2008  Carreras  Nintendo   \n",
-            "2  WII SPORTS RESORT        Wii                2009  Deportes  Nintendo   \n",
+            "                                      Nombre Plataforma  Año de lanzamiento  \\\n",
+            "6                              MARIO KART DS         DS                2005   \n",
+            "71    THE LEGEND OF ZELDA: TWILIGHT PRINCESS        Wii                2006   \n",
+            "74                   SUPER SMASH BROS. MELEE         GC                2001   \n",
+            "93                      SUPER MARIO SUNSHINE         GC                2002   \n",
+            "119                MARIO KART: SUPER CIRCUIT        GBA                2001   \n",
+            "160      THE LEGEND OF ZELDA: THE WIND WAKER         GC                2002   \n",
+            "361                            METROID PRIME         GC                2002   \n",
+            "381  THE LEGEND OF ZELDA: A LINK TO THE PAST        GBA                2002   \n",
+            "678                               GOLDEN SUN        GBA                2001   \n",
+            "727                           METROID FUSION        GBA                2002   \n",
             "\n",
-            "   Ventas USA  Ventas Europa  Ventas Japon  Ventas en Resto del Mundo  \\\n",
-            "0       41.36          28.96          3.77                       8.45   \n",
-            "1       15.68          12.76          3.79                       3.29   \n",
-            "2       15.61          10.93          3.28                       2.95   \n",
+            "         Genero Publicador  Ventas USA  Ventas Europa  Ventas Japon  \\\n",
+            "6      Carreras   Nintendo        9.71           7.47          4.13   \n",
+            "71       Accion   Nintendo        3.74           2.14          0.60   \n",
+            "74        Lucha   Nintendo        4.41           1.04          1.39   \n",
+            "93   Plataforma   Nintendo        4.01           1.26          0.87   \n",
+            "119    Carreras   Nintendo        2.62           1.64          0.99   \n",
+            "160      Accion   Nintendo        2.60           0.99          0.89   \n",
+            "361    Disparos   Nintendo        1.96           0.67          0.10   \n",
+            "381      Accion   Nintendo        1.75           0.52          0.33   \n",
+            "678         RPG   Nintendo        0.93           0.38          0.40   \n",
+            "727      Accion   Nintendo        1.18           0.27          0.17   \n",
             "\n",
-            "   Ventas Totales  Puntuacion de criticos  Cantidad de criticas  \\\n",
-            "0           82.53                    76.0                  51.0   \n",
-            "1           35.52                    82.0                  73.0   \n",
-            "2           32.77                    80.0                  73.0   \n",
+            "     Ventas en Resto del Mundo  Ventas Totales  Puntuacion de criticos  \\\n",
+            "6                         1.90           23.21                    91.0   \n",
+            "71                        0.68            7.15                    95.0   \n",
+            "74                        0.22            7.07                    92.0   \n",
+            "93                        0.17            6.31                    92.0   \n",
+            "119                       0.23            5.47                    93.0   \n",
+            "160                       0.13            4.60                    96.0   \n",
+            "361                       0.09            2.82                    97.0   \n",
+            "381                       0.10            2.70                    95.0   \n",
+            "678                       0.06            1.76                    91.0   \n",
+            "727                       0.06            1.68                    92.0   \n",
             "\n",
-            "   Puntaje de Usuario  Cantidad de usuarios Desarrollador  \\\n",
-            "0                 8.0                   322      Nintendo   \n",
-            "1                 8.3                   709      Nintendo   \n",
-            "2                 8.0                   192      Nintendo   \n",
+            "     Cantidad de criticas  Puntaje de Usuario  Cantidad de usuarios  \\\n",
+            "6                    64.0                 8.6                   464   \n",
+            "71                   73.0                 9.0                  1658   \n",
+            "74                   38.0                 9.1                   568   \n",
+            "93                   61.0                 8.6                   439   \n",
+            "119                  24.0                 8.3                   108   \n",
+            "160                  80.0                 8.9                   968   \n",
+            "361                  70.0                 9.3                   747   \n",
+            "381                  30.0                 9.1                   314   \n",
+            "678                  29.0                 9.3                   198   \n",
+            "727                  44.0                 9.1                   200   \n",
             "\n",
-            "  Clasificacion por Edad  \n",
-            "0                      E  \n",
-            "1                      E  \n",
-            "2                      E  \n"
+            "                 Desarrollador Clasificacion por Edad  \n",
+            "6                     Nintendo                      E  \n",
+            "71                    Nintendo                      T  \n",
+            "74                    HAL Labs                      T  \n",
+            "93                    Nintendo                      E  \n",
+            "119        Intelligent Systems                      E  \n",
+            "160                   Nintendo                      E  \n",
+            "361              Retro Studios                      T  \n",
+            "381                     Capcom                      E  \n",
+            "678  Camelot Software Planning                      E  \n",
+            "727                   Nintendo                      E  \n",
+            "                                          Nombre Plataforma  \\\n",
+            "24                       SUPER SMASH BROS. BRAWL        Wii   \n",
+            "31                            SUPER MARIO GALAXY        Wii   \n",
+            "63                          SUPER MARIO GALAXY 2        Wii   \n",
+            "181                         SUPER MARIO 3D WORLD       WiiU   \n",
+            "213           THE LEGEND OF ZELDA: SKYWARD SWORD        Wii   \n",
+            "309   THE LEGEND OF ZELDA: A LINK BETWEEN WORLDS        3DS   \n",
+            "580                       FIRE EMBLEM: AWAKENING        3DS   \n",
+            "1502                        XENOBLADE CHRONICLES        Wii   \n",
+            "1769                                 BAYONETTA 2       WiiU   \n",
+            "2139                      METROID PRIME: TRILOGY        Wii   \n",
+            "\n",
+            "      Año de lanzamiento      Genero Publicador  Ventas USA  Ventas Europa  \\\n",
+            "24                  2008       Lucha   Nintendo        6.62           2.55   \n",
+            "31                  2007  Plataforma   Nintendo        6.06           3.35   \n",
+            "63                  2010  Plataforma   Nintendo        3.56           2.35   \n",
+            "181                 2013  Plataforma   Nintendo        2.11           1.16   \n",
+            "213                 2011      Accion   Nintendo        2.03           1.16   \n",
+            "309                 2013      Accion   Nintendo        1.40           1.01   \n",
+            "580                 2012         RPG   Nintendo        0.90           0.45   \n",
+            "1502                2010         RPG   Nintendo        0.43           0.25   \n",
+            "1769                2014      Accion   Nintendo        0.32           0.28   \n",
+            "2139                2009    Disparos   Nintendo        0.42           0.05   \n",
+            "\n",
+            "      Ventas Japon  Ventas en Resto del Mundo  Ventas Totales  \\\n",
+            "24            2.66                       1.01           12.84   \n",
+            "31            1.20                       0.74           11.35   \n",
+            "63            0.98                       0.62            7.51   \n",
+            "181           0.73                       0.32            4.32   \n",
+            "213           0.37                       0.38            3.95   \n",
+            "309           0.46                       0.23            3.10   \n",
+            "580           0.54                       0.13            2.01   \n",
+            "1502          0.16                       0.07            0.91   \n",
+            "1769          0.10                       0.06            0.76   \n",
+            "2139          0.00                       0.14            0.61   \n",
+            "\n",
+            "      Puntuacion de criticos  Cantidad de criticas  Puntaje de Usuario  \\\n",
+            "24                      93.0                  81.0                 8.9   \n",
+            "31                      97.0                  73.0                 8.9   \n",
+            "63                      97.0                  87.0                 9.1   \n",
+            "181                     93.0                  83.0                 9.0   \n",
+            "213                     93.0                  81.0                 8.0   \n",
+            "309                     91.0                  81.0                 8.9   \n",
+            "580                     92.0                  72.0                 9.1   \n",
+            "1502                    92.0                  59.0                 8.9   \n",
+            "1769                    91.0                  80.0                 8.2   \n",
+            "2139                    91.0                  48.0                 9.3   \n",
+            "\n",
+            "      Cantidad de usuarios        Desarrollador Clasificacion por Edad  \n",
+            "24                    1662            Game Arts                      T  \n",
+            "31                    2147             Nintendo                      E  \n",
+            "63                    1854   Nintendo EAD Tokyo                      E  \n",
+            "181                   1607             Nintendo                      E  \n",
+            "213                   1958             Nintendo                   E10+  \n",
+            "309                   1057             Nintendo                      E  \n",
+            "580                   1130  Intelligent Systems                      T  \n",
+            "1502                   950        Monolith Soft                      T  \n",
+            "1769                  1217        PlatinumGames                      M  \n",
+            "2139                   316        Retro Studios                      T  \n"
           ]
         }
       ],
@@ -78,7 +172,7 @@
         "df = pd.read_csv(url, sep=';')\n",
         "\n",
         "\n",
-        "df = df.set_axis(['Nombre', 'Plataforma', 'Año de lanzamiento','Genero', 'Editora', 'Ventas USA','Ventas Europa', 'Ventas Japon','Ventas en Resto del Mundo',\n",
+        "df = df.set_axis(['Nombre', 'Plataforma', 'Año de lanzamiento','Genero', 'Publicador', 'Ventas USA','Ventas Europa', 'Ventas Japon','Ventas en Resto del Mundo',\n",
         "                  'Ventas Totales', 'Puntuacion de criticos','Cantidad de criticas', 'Puntaje de Usuario','Cantidad de usuarios','Desarrollador','Clasificacion por Edad'], axis=1)\n",
         "\n",
         "df['Nombre'] = df['Nombre'].str.upper()\n",
@@ -95,15 +189,27 @@
         "df['Genero'] = df['Genero'].str.replace('Strategy','Estrategia')\n",
         "\n",
         "\n",
-        "##creacion de rango de fechas\n",
+        "dosmil = df['Año de lanzamiento'].between(1996, 2006)\n",
+        "dosdiez = df['Año de lanzamiento'].between(2007, 2016)\n",
         "\n",
-        "dosmil = df['Año de lanzamiento'].between(2000, 2010)\n",
+        "##TOP 10 DE PUBLICACIONES DE NINTENDO CON PUNTAJE MAYOR A 90, DEL AÑO 1996 al 2006 y desde 2007 AL 2016\n",
+        "\n",
+        "nin2000 = df.loc[(df['Puntuacion de criticos'] > 90) & (df['Publicador'] == 'Nintendo') & (dosmil) ]\n",
+        "nin2010 = df.loc[(df['Puntuacion de criticos'] > 90) & (df['Publicador'] == 'Nintendo') & (dosdiez) ]\n",
+        "\n",
+        "#orden para verse seria puntaje/nombre del juego/publicadora/año y seria un top 10 ordenado por puntaje dentro de la primera decada y segunda\n",
+        "\n",
+        "#top 10 del promedio de juegos mayor puntuados por publicador y por desarrollador en orden descendente que diga publicador y puntaje promedio\n",
         "\n",
         "##promedio = dosmil['Puntuacion de criticos'].resample('Y').mean()\n",
         "#print(promedio)\n",
         "\n",
+        "print(nin2000.head(10))\n",
         "\n",
-        "print(df[dosmil].head(3))\n",
+        "print(nin2010.head(10))\n",
+        "\n",
+        "\n",
+        "##print(df[dosmil].head(6))\n",
         "##print(df.head(6))"
       ]
     }
