--- a/Primer entrega.ipynb
+++ b/Primer entrega.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyMqSnt5uzUns5v96bvDA3yP",
+      "authorship_tag": "ABX9TyMmb3c1vhaKWIjW/kWRWqpz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BA5wxy4fm_5b",
-        "outputId": "78413f75-fe14-4f01-d9fe-29787cbee5ad"
+        "outputId": "94864c49-8c52-4687-8c25-cf48389e738e"
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
           "name": "stdout",
           "text": [
             "Empty DataFrame\n",
-            "Columns: [(Puntuacion de criticos, min), (Puntuacion de criticos, max), (Puntuacion de criticos, mean)]\n",
+            "Columns: [(Puntuacion de criticos, mean), (Puntuacion de criticos, min), (Puntuacion de criticos, max)]\n",
             "Index: []\n"
           ]
         }
@@ -92,7 +92,7 @@
         "nin2000 = df.loc[(juegos_memorables) & (df['Publicador'] == 'Nintendo') & (dosmil) ]\n",
         "nin2010 = df.loc[(juegos_memorables) & (df['Publicador'] == 'Nintendo') & (dosdiez) ]\n",
         "\n",
-        "Puntuacion_publicador = df.loc[(df['Puntuacion de criticos'] > 0) & (df['Publicador'].value_counts() > 10)].groupby('Publicador').agg({'Puntuacion de criticos':['min','max','mean']})\n",
+        "Puntuacion_publicador = df.loc[(df['Puntuacion de criticos'] > 0) & (df['Publicador'].value_counts() > 10)].groupby('Publicador').agg({'Puntuacion de criticos':['mean','min','max']})\n",
         "Puntuacion_publicador = Puntuacion_publicador.sort_values(by=('Puntuacion de criticos','mean'), ascending=False)\n",
         "\n",
         "\n",
