--- a/Primer entrega.ipynb
+++ b/Primer entrega.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyNg6qvEya3xNseteD5+9w5c",
+      "authorship_tag": "ABX9TyPXO/KTO8dNY1tILZB7uO+K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 44,
       "metadata": {
         "id": "BA5wxy4fm_5b"
       },
@@ -45,8 +45,8 @@
         "\n",
         "df = pd.read_csv(url, sep=';')\n",
         "\n",
-        "\n",
-        "df = df.set_axis(['Juego', 'Plataforma', 'Año de lanzamiento','Genero', 'Publicador', 'Ventas USA','Ventas Europa', 'Ventas Japon','Ventas resto del Mundo',\n",
+        "##REEMPLAZO DE PALABRAS EN INGLES A ESPAÑOL\n",
+        "df = df.set_axis(['Juego', 'Consola', 'Año de lanzamiento','Genero', 'Publicador', 'Ventas USA','Ventas Europa', 'Ventas Japon','Ventas resto del Mundo',\n",
         "                  'Ventas Totales', 'Puntuacion de criticos','Cantidad de criticas', 'Puntaje de Usuario','Cantidad de usuarios','Desarrollador','Clasificacion por Edad'], axis=1)\n",
         "\n",
         "df['Juego'] = df['Juego'].str.upper()\n",
@@ -65,6 +65,9 @@
         "\n",
         "pri_dec = df['Año de lanzamiento'].between(1996, 2006)\n",
         "seg_dec = df['Año de lanzamiento'].between(2007, 2016)\n",
+        "\n",
+        "##ESTO DA EL PROMEDIO DE PUNTAJES ENTRE LOS USUARIOS Y LA CRITICA\n",
+        "df['promedio de puntaje']= (df['Puntuacion de criticos'] + df['Puntaje de Usuario'])/2\n",
         "\n"
       ]
     },
@@ -104,7 +107,7 @@
         "id": "XoEyGMkqlOZE",
         "outputId": "e73a7644-1cef-4bb0-df20-f4b15e05ec04"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +215,7 @@
         "outputId": "096383cc-4bea-479a-921b-dd7b7f964f70",
         "id": "Tm_8gJl7QSwp"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +289,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Puntuacion total para Desarrolladores y Publicadores (promedio de puntajes dados entre usuarios y la critica)"
+        "# PUNTUACION TOTAL (promedio de puntajes dados entre usuarios y la critica)"
       ],
       "metadata": {
         "id": "3ukfZAprYQ-I"
@@ -296,8 +299,6 @@
       "cell_type": "code",
       "source": [
         "##DESARROLLADOR con mayor puntuacion Total\n",
-        "\n",
-        "df['promedio de puntaje']= (df['Puntuacion de criticos'] + df['Puntaje de Usuario'])/2\n",
         "\n",
         "promedio_des_pje = df.loc[df[('promedio de puntaje')].notna() & (df['Desarrollador'].notna())].groupby('Desarrollador').agg({'promedio de puntaje':['max']})\n",
         "promedios_des_pje = promedio_des_pje.sort_values(by=('promedio de puntaje','max'), ascending=False)\n",
@@ -317,9 +318,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f5X2_zGJYQnt",
-        "outputId": "f5291485-08e4-4ff7-e8d7-be15eed045c2"
+        "outputId": "4483508c-a2b2-4dc4-a611-513792cb2ab1"
       },
-      "execution_count": 155,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +486,7 @@
         "id": "zqEXw0j9lpgL",
         "outputId": "77d9ccfe-edae-4cb8-bfe3-436dcb97460c"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,6 +812,169 @@
             "Sega                            151.03\n",
             "Konami Digital Entertainment    147.82\n",
             "Name: Ventas Totales, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# AÑO PROMEDIO EN QUE SE VENDIO MAS JUEGOS POR CADA CONSOLA Y SUMA TOTAL DE JUEGOS VENDIDOS POR CONSOLA"
+      ],
+      "metadata": {
+        "id": "kMvF2UESjV5N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "pcva = df.groupby('Consola')['Año de lanzamiento'].mean()\n",
+        "pcva_redondeo = round(pcva)\n",
+        "print(f\"\\n\\n{'Año promedio que se vendio mas juegos por consola'}\\n\\n\",pcva_redondeo)\n",
+        "\n",
+        "cma = df.groupby('Consola')['Ventas Totales'].sum()\n",
+        "cma = cma.sort_values(ascending=False)\n",
+        "cma_redondeo = round(cma)\n",
+        "print(f\"\\n\\n{'Suma total de los juegos mas vendidos por consola'}\\n\\n\",cma_redondeo,f\"\\n\\n{'**El punto marca el millon*'}*\")\n"
+      ],
+      "metadata": {
+        "id": "Y65uvv94jXcL",
+        "outputId": "c52fbff5-fef0-47cd-b2b9-0fb61bd454c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "Año promedio que se vendio mas juegos por consola\n",
+            "\n",
+            " Consola\n",
+            "3DS     2013.0\n",
+            "DC      2000.0\n",
+            "DS      2007.0\n",
+            "GBA     2003.0\n",
+            "GC      2003.0\n",
+            "PC      2009.0\n",
+            "PS      1999.0\n",
+            "PS2     2004.0\n",
+            "PS3     2010.0\n",
+            "PS4     2015.0\n",
+            "PSP     2007.0\n",
+            "PSV     2013.0\n",
+            "Wii     2008.0\n",
+            "WiiU    2014.0\n",
+            "X360    2010.0\n",
+            "XB      2004.0\n",
+            "XOne    2015.0\n",
+            "Name: Año de lanzamiento, dtype: float64\n",
+            "\n",
+            "\n",
+            "Suma total de los juegos mas vendidos por consola\n",
+            "\n",
+            " Consola\n",
+            "PS2     981.0\n",
+            "X360    888.0\n",
+            "PS3     828.0\n",
+            "Wii     696.0\n",
+            "DS      413.0\n",
+            "PS4     245.0\n",
+            "PS      214.0\n",
+            "XB      213.0\n",
+            "PC      203.0\n",
+            "PSP     196.0\n",
+            "GC      160.0\n",
+            "GBA     138.0\n",
+            "XOne    134.0\n",
+            "3DS     127.0\n",
+            "WiiU     67.0\n",
+            "PSV      34.0\n",
+            "DC        5.0\n",
+            "Name: Ventas Totales, dtype: float64 \n",
+            "\n",
+            "**El punto marca el millon**\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EL GENERO DE JUEGO MAS VENDIDO Y CON MEJOR PUNTAJE PROMEDIO"
+      ],
+      "metadata": {
+        "id": "M7UeJ8ONgu8A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "genero = df.groupby('Genero')['Ventas Totales'].sum()\n",
+        "genero_redondeo = round(genero)\n",
+        "generos = genero_redondeo.sort_values(ascending=False)\n",
+        "print(f\"\\n\\n{'Genero de juegos mas vendidos'}\\n\\n\",generos)\n",
+        "\n",
+        "puntaje_genero = df.loc[df[('promedio de puntaje')].notna() & (df['Genero'].notna())].groupby('Genero').agg({'promedio de puntaje':['mean']})\n",
+        "puntaje_genero = puntaje_genero.sort_values(by=('promedio de puntaje','mean'), ascending=False)\n",
+        "print(F\"\\n\\n{'Top de los generos con el mayor puntaje promedio'}\\n\\n\",puntaje_genero)"
+      ],
+      "metadata": {
+        "id": "zJeH7Br1gt1j",
+        "outputId": "80f3fa6f-bd07-48a9-f80b-c345113be62f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "Genero de juegos mas vendidos\n",
+            "\n",
+            " Genero\n",
+            "Accion        1263.0\n",
+            "Deportes       900.0\n",
+            "Disparos       836.0\n",
+            "RPG            506.0\n",
+            "Carreras       488.0\n",
+            "Miscelania     435.0\n",
+            "Plataforma     385.0\n",
+            "Lucha          255.0\n",
+            "Simulacion     221.0\n",
+            "Aventura        95.0\n",
+            "Puzzle          80.0\n",
+            "Estrategia      78.0\n",
+            "Name: Ventas Totales, dtype: float64\n",
+            "\n",
+            "\n",
+            "Top de los generos con el mayor puntaje promedio\n",
+            "\n",
+            "            promedio de puntaje\n",
+            "                          mean\n",
+            "Genero                        \n",
+            "Deportes             40.584175\n",
+            "RPG                  40.215568\n",
+            "Estrategia           40.055311\n",
+            "Disparos             39.023117\n",
+            "Puzzle               38.972881\n",
+            "Plataforma           38.797990\n",
+            "Simulacion           38.587583\n",
+            "Lucha                38.498021\n",
+            "Carreras             38.365956\n",
+            "Accion               37.474665\n",
+            "Miscelania           37.127461\n",
+            "Aventura             36.747093\n"
           ]
         }
       ]
